--- a/ff1.html
+++ b/ff1.html
@@ -13,10 +13,10 @@
             <a class="book" href="http://www.amazon.co.jp/dp/B07SRLRS4M" id="link2">
                 よくわかるPython3入門2.NumPy・Matplotlib編
             </a>
-            <a class="book" href="http://www.amazon.co.jp/dp/B07T9SZ96B" id="link3">
-                よくわかるPython3入門4.Pandasでデータ分析編
-            </a>
+         
         </p>
+	  
+	    <h3> 変分ベイズ法の最も有用な概念とは　</h3>
      
 	
 	<p>We've been working so hard to improve customer experience. You'll absolutely fascinate the</r>
