--- a/ff1.html
+++ b/ff1.html
@@ -6,21 +6,13 @@
     <body>
       <h1>Craete the Flow</h1>
 
-        <p class="recent books">
-            <a class="book" href="https://www.amazon.co.jp/dp/B07TN4D3HG" id="link1">
-                Python3によるビジネスに役立つデータ分析入門
-            </a>
-            <a class="book" href="http://www.amazon.co.jp/dp/B07SRLRS4M" id="link2">
-                よくわかるPython3入門2.NumPy・Matplotlib編
-            </a>
-         
-        </p>
+       <ul>
+	       <li>significantly</li>
+	       <li>substantially</li>
+	       <li>considerably</li>
 	  
 	    <h3> 変分ベイズ法の最も有用な概念とは　</h3>
-     
-	
-	<p>We've been working so hard to improve customer experience. You'll absolutely fascinate the</r>
-	  beauty of our new lirease
+   
 </p>
     </body>
 </html>
